--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-unifi",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "NodeJS class for querying UniFi-Controller (www.ubnt.com)",
   "author": "Jens Maus <mail@jens-maus.de>",
   "homepage": "https://github.com/jens-maus/node-unifi",
@@ -22,7 +22,7 @@
   },
   "main": "unifi.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"WARNING: no test implemented yet\" && exit 0"
   },
   "bugs": {
     "url": "https://github.com/jens-maus/node-unifi/issues"
