--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,8 +27,10 @@ jobs:
       run: sudo apt update && sudo apt install ca-certificates apt-transport-https
 
     # install UniFi controller
-    - name: install UniFi controller
+    - name: install UniFi controller using EUS
       run: |
-        wget -O ./unifi-install.sh https://get.glennr.nl/unifi/install/unifi-5.12.66.sh
+        wget -O ./unifi-install.sh https://get.glennr.nl/unifi/install/unifi-5.12.72.sh
         chmod +x ./unifi-install.sh
-        sudo ./unifi-install.sh
+        export TERM=vt100
+        sudo ./unifi-install.sh --skip
+        netstat -tulpn
