--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,6 +43,12 @@ jobs:
         export TERM=vt100
         sudo $GITHUB_WORKSPACE/.github/workflows/unifi-install.sh --skip --server-ip 127.0.0.1
 
+    # extract/install demo database
+    - name: extract/install demo database
+      run: |
+        tar xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2
+        mongorestore --port 27117 --drop db-demo-dump
+
     # run npm tests
     - name: run npm tests
       run: npm test
