sudo mongorestore and unifi restart

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,8 +47,8 @@ jobs:
     - name: extract/install demo database
       run: |
         tar xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2
-        mongorestore --port 27117 --drop db-demo-dump
-        systemctl restart unifi
+        sudo mongorestore --port 27117 --drop db-demo-dump
+        sudo systemctl restart unifi
 
     # run npm tests
     - name: run npm tests
