--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,30 +31,36 @@ jobs:
     - name: install node-unifi
       run: npm install
 
-    # install required dependencies
-    - name: install dependencies
+    # docker test
+    - name: install+run docker-unifi-controller
       run: |
-        sudo apt -qq update || true
-        sudo apt install ca-certificates apt-transport-https
+        docker create --name=unifi-controller -e PUID=1000 -e PGID=1000 -e MEM_LIMIT=1024M -p 8443:8443 linuxserver/unifi-controller
+        docker start unifi-controller
 
-    # install UniFi controller
-    - name: install UniFi controller using EUS
-      run: |
-        export TERM=vt100
-        sudo $GITHUB_WORKSPACE/.github/workflows/unifi-install.sh --skip --server-ip 127.0.0.1
+      ## install required dependencies
+      #- name: install dependencies
+      #  run: |
+      #    sudo apt -qq update || true
+      #    sudo apt install ca-certificates apt-transport-https
 
-    # extract/install demo database
-    - name: extract/install demo database
-      run: |
-        tar xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2
-        sudo mongorestore --port 27117 --drop db-demo-dump
-        sudo systemctl stop unifi
-        sudo sh -c "echo is_default=false >>/usr/lib/unifi/data/system.properties"
-        sudo systemctl start unifi
+      ## install UniFi controller
+      #- name: install UniFi controller using EUS
+      #  run: |
+      #    export TERM=vt100
+      #    sudo $GITHUB_WORKSPACE/.github/workflows/unifi-install.sh --skip --server-ip 127.0.0.1
 
-    # run npm tests
-    - name: run npm tests
-      run: npm test
+      ## extract/install demo database
+      #- name: extract/install demo database
+      #  run: |
+      #    tar xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2
+      #    sudo mongorestore --port 27117 --drop db-demo-dump
+      #    sudo systemctl stop unifi
+      #    sudo sh -c "echo is_default=false >>/usr/lib/unifi/data/system.properties"
+      #    sudo systemctl start unifi
+
+      ## run npm tests
+      #- name: run npm tests
+      #  run: npm test
 
     - name: remote debug tmate session
       uses: mxschmitt/action-tmate@v1
