try to install mongodb tools

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,7 +37,8 @@ jobs:
         mkdir unifi-storage
         docker create --name=unifi-controller -e PUID=1000 -e PGID=1000 -e MEM_LIMIT=1024M -p 8443:8443 -v unifi-storage:/config linuxserver/unifi-controller
         docker start unifi-controller
-        docker exec -it unifi-controller apt install mongodb-org-tools
+        docker exec unifi-controller apt update
+        docker exec unifi-controller apt install mongodb-org-tools
 
       ## install required dependencies
       #- name: install dependencies
