--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,7 +35,7 @@ jobs:
     - name: install+run docker-unifi-controller
       run: |
         mkdir unifi-storage
-        docker create --name=unifi-controller -e PUID=1000 -e PGID=1000 -e MEM_LIMIT=1024M -p 8443:8443 -v unifi-storage:/config linuxserver/unifi-controller
+        docker create --name=unifi-controller -e PUID=1001 -e PGID=116 -e MEM_LIMIT=1024M -p 8443:8443 -v $GITHUB_WORKSPACE/unifi-storage:/config linuxserver/unifi-controller
         docker start unifi-controller
         docker exec unifi-controller apt update
         docker exec unifi-controller apt install mongodb-org-tools
