more database tests

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,12 +36,14 @@ jobs:
       run: |
         docker create --name=unifi-controller -e PUID=1001 -e PGID=116 -e MEM_LIMIT=1024M -p 8443:8443 -v $GITHUB_WORKSPACE/unifi-storage:/config linuxserver/unifi-controller
         docker start unifi-controller
-        docker exec unifi-controller apt update
-        docker exec unifi-controller apt install mongodb-org-tools
-        tar -C unifi-storage -xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2 
-        docker exec unifi-controller mongorestore --port 27117 --drop /config/db-demo-dump
+        #docker exec unifi-controller apt update
+        #docker exec unifi-controller apt install mongodb-org-tools
+        #tar -C unifi-storage -xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2 
+        #docker exec unifi-controller mongorestore --port 27117 --drop /config/db-demo-dump
         docker stop unifi-controller
-        echo "is_default=false" >>unifi-storage/data/system.properties
+        #echo "is_default=false" >>unifi-storage/data/system.properties
+        rm -rf unifi-storage/data
+        tar -C unifi-storage -xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2
         docker start unifi-controller
 
 
