--- a/package.json
+++ b/package.json
@@ -18,11 +18,28 @@
   },
   "dependencies": {
     "request": "^2.88.2",
-    "async": "^3.2.0"
+    "async": "^3.2.0",
+    "camo-purge": "latest",
+    "mocha": "latest",
+    "mocha-clean": "latest",
+    "should": "latest",
+    "mocha-steps": "latest"
   },
+  "devDependencies": {
+    "pre-commit": "^1.2.2",
+    "xo": "^0.18.2"
+  },
+  "xo": {
+    "space": 2
+  },
+  "pre-commit": [
+    "lintfix"
+  ],
   "main": "unifi.js",
   "scripts": {
-    "test": "echo \"WARNING: no test implemented yet\" && exit 0"
+    "test": "camo-purge; xo; mocha --colors",
+    "lint": "xo",
+    "lintfix": "xo --fix"
   },
   "bugs": {
     "url": "https://github.com/jens-maus/node-unifi/issues"
