--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,6 +42,9 @@ jobs:
         docker start unifi-controller
         sleep 10
 
+    - name: remote debug tmate session
+      uses: mxschmitt/action-tmate@v1
+
     # run npm tests
     - name: run npm tests
       run: npm test
