increate sleep timer

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,10 +40,10 @@ jobs:
         rm -rf unifi-storage/data
         tar -C unifi-storage -xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2
         docker start unifi-controller
-        sleep 10
+        sleep 30
 
-    - name: remote debug tmate session
-      uses: mxschmitt/action-tmate@v1
+    #- name: remote debug tmate session
+    #  uses: mxschmitt/action-tmate@v1
 
     # run npm tests
     - name: run npm tests
