--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,6 +19,7 @@ jobs:
 
     # do a matrix test with different node versions
     strategy:
+      fail-fast: false
       matrix:
         node-version: [8.x, 10.x, 12.x]
 
@@ -42,8 +43,8 @@ jobs:
         # stop the unifi-controller right away and
         # install our own demo database instead
         docker stop unifi-controller
-        rm -rf unifi-storage/data
-        tar -C unifi-storage -xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2
+        sudo rm -rf unifi-storage/data
+        sudo tar -C unifi-storage -xf $GITHUB_WORKSPACE/.github/workflows/db-demo-dump.tar.bz2
         # final unifi-controller startup
         docker start unifi-controller
         # wait for unifi-controller to be ready
