--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "dependencies": {
     "request": "^2.88.2",
-    "async": "^3.2.0",
-    "mocha": "latest",
-    "mocha-clean": "latest",
-    "should": "latest",
-    "mocha-steps": "latest",
-    "snyk": "^1.321.0"
+    "async": "^3.2.0"
   },
   "devDependencies": {
     "eslint": ">=4.18.2",
     "pre-commit": "^1.2.2",
-    "xo": "^0.18.2"
+    "xo": "^0.18.2",
+    "should": "latest",
+    "mocha": "latest",
+    "mocha-clean": "latest",
+    "mocha-steps": "latest",
+    "snyk": "^1.321.0"
   },
   "xo": {
     "space": 2
