--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-unifi",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "NodeJS class for querying UniFi-Controller (www.ubnt.com)",
   "author": "Jens Maus <mail@jens-maus.de>",
   "homepage": "https://github.com/jens-maus/node-unifi",
@@ -39,7 +39,7 @@
   ],
   "main": "unifi.js",
   "scripts": {
-    "test": "xo; mocha --colors",
+    "test": "xo && mocha --colors",
     "lint": "xo",
     "lintfix": "xo --fix",
     "snyk-protect": "snyk protect",
