--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-unifi",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "description": "NodeJS class for querying UniFi-Controller (www.ubnt.com)",
   "author": "Jens Maus <mail@jens-maus.de>",
   "homepage": "https://github.com/jens-maus/node-unifi",
@@ -17,7 +17,9 @@
     "url": "git+https://github.com/jens-maus/node-unifi.git"
   },
   "dependencies": {
-    "request": "^2.88.2",
+    "node-fetch": "^2.6.1",
+    "fetch-cookie": "^0.11.0",
+    "tough-cookie": "^4.0.0",
     "async": "^3.2.0"
   },
   "devDependencies": {
