--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "axios-cookiejar-support": "^2.0.3",
+    "http-cookie-agent": "^1.0.3",
     "eventemitter2": "^6.4.5",
-    "https": "^1.0.0",
     "tough-cookie": "^4.0.0",
     "url": "^0.11.0",
     "ws": "^8.3.0"
