--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-unifi",
-  "version": "2.0.5",
+  "version": "2.1.0",
   "description": "NodeJS class for querying UniFi-Controller (www.ubnt.com)",
   "author": "Jens Maus <mail@jens-maus.de>",
   "homepage": "https://github.com/jens-maus/node-unifi",
@@ -19,7 +19,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "eventemitter2": "^6.4.5",
-    "http-cookie-agent": "^1.0.5",
+    "http-cookie-agent": "^4.0.1",
     "tough-cookie": "^4.0.0",
     "url": "^0.11.0",
     "ws": "^8.7.0"
@@ -49,6 +49,9 @@
   },
   "bugs": {
     "url": "https://github.com/jens-maus/node-unifi/issues"
+  },
+  "engines": {
+    "node": ">=14.18.0 <15.0.0 || >=16.0.0"
   },
   "readmeFilename": "README.md"
 }
