--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "ws": "^8.9.0"
   },
   "devDependencies": {
+    "dot-prop": ">=7.2.0",
     "eslint": ">=7.32.0",
-    "pre-commit": "^1.2.2",
-    "xo": "~0.39.1",
     "glob-parent": ">=6.0.2",
-    "should": "latest",
     "mocha": "latest",
     "mocha-clean": "latest",
     "mocha-steps": "latest",
-    "dot-prop": ">=7.2.0"
+    "pre-commit": "^1.2.2",
+    "should": "latest",
+    "xo": "~0.39.1"
   },
   "xo": {
     "space": 2
